--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-simple-animate": "^3.5.2",
     "swr": "^2.2.5",
     "web3": "^4.10.0"
   },
