--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-simple-animate": "^3.5.2",
+    "react-toastify": "^10.0.5",
     "swr": "^2.2.5",
     "web3": "^4.10.0"
   },
